--- a/menjacnica.html
+++ b/menjacnica.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Menjačnica</title>
+
+  
 </head>
 
 <body>
@@ -21,24 +23,14 @@
             <input class="input-field in-4" id="franak" type="number" placeholder="Franak">
         </div>
     </div>
-
-    <div class="tables">
-    <button class="btn btn-primary" id="view-doctors">
-      View Doctor
-    </button>
-    <div>
-      <div id="tables">   
-        <div class="tables-doctor">
-          
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <script src="script.js" charset="utf-8"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" src="kursna_lista.json"></script>
+	<script src="script.js" charset="utf-8"></script>
 </body>
 
 </html>
