--- a/menjacnica.html
+++ b/menjacnica.html
@@ -9,29 +9,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Menjačnica</title>
-
-  
 </head>
 
 <body>
-    <div class="container">
-        <h1>MENJAČNICA</h1>
-        <div class="row">
-            <input class="input-field in-1" id="dinar" type="number" placeholder="Dinar">
-            <input class="input-field in-2" id="euro" type="number" placeholder="Euro (€)">
-            <input class="input-field in-3" id="dolar" type="number" placeholder="Dolar ($)">
-            <input class="input-field in-4" id="franak" type="number" placeholder="Franak">
+    <form name="converter" id="myForm">
+        <div class="container">
+            <h1>MENJAČNICA</h1>
+            <div class="row">
+                <input class="input-field in-1" type="number" placeholder="Dinar" name="dinar" onChange="dinarConverter(this.value)" />
+                <input class="input-field in-2" type="number" placeholder="Euro (€)" name="euro" onChange="euroConverter(this.value)" />
+                <input class="input-field in-3" type="number" placeholder="Dolar ($)" name="dolar" onChange="dolarConverter(this.value)" />
+                <input class="input-field in-4" type="number" placeholder="Franak" name="franak" onChange="franakConverter(this.value)" />
+            </div>
+            <div class="row-2 row">
+                <div class="col-6 left">
+                    <input type="button" value="Calculate" />
+                </div>
+                <div class="col-6 right">
+                    <input type="button" onclick="Reset()" value="Clear" />
+                </div>
+            </div>
         </div>
-    </div>
+    </form>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	
-	<script type="text/javascript" src="kursna_lista.json"></script>
-	<script src="script.js" charset="utf-8"></script>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+
+    <script type="text/javascript" src="kursna_lista.json"></script>
+    <script src="script.js" charset="utf-8"></script>
 </body>
 
 </html>
